tests/NormalTests/paczka1/fuzzy1/86325493.err
Error in line 4: OXD S173 55,8
Error in line 10: OXD S65 35,6
Error in line 32: NKXV S610 61,4
Error in line 34: NKXV A392 68,8
